# tastytrade-ghostfolio

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  g.py  pylama.ini  pyproject.toml  symbol_mapping.example.yaml
.github/workflows/: continuous_delivery.yml
src/: main.py
src/configs/: settings.py
src/models/: ghostfolio_activity.py
src/tastytrade_ghostfolio/: main.py
src/tastytrade_ghostfolio/adapters/: ghostfolio_activity.py  trade.py
src/tastytrade_ghostfolio/configs/: settings.py
src/tastytrade_ghostfolio/core/: exceptions.py
src/tastytrade_ghostfolio/core/entity/: account.py  asset.py  dividend_info.py  portfolio.py  split.py  symbol_change.py  trade.py  transaction_type.py
src/tastytrade_ghostfolio/core/ports/: dividends_provider.py  ghostfolio.py  tastytrade.py
src/tastytrade_ghostfolio/entity/: ghostfolio_trades.py  trades.py
src/tastytrade_ghostfolio/infra/dividends_provider/: dividends_provider_adapter.py  (+1 more)
src/tastytrade_ghostfolio/models/: ghostfolio_account.py  ghostfolio_activity.py
src/tastytrade_ghostfolio/repositories/: symbol_mapping.py
src/tastytrade_ghostfolio/services/: ghostfolio.py  tastytrade.py
tests/: conftest.py
tests/infra/: ghostfolio_api.py  tastytrade_api.py  yahoo_finance_api.py
tests/integration/: conftest.py
tests/resources/ghostfolio/: orders.json
tests/resources/tastytrade/: tastytrade_transactions.py
tests/unit/: test_tastytrade.py  test_trades.py
tests/unit/adapters/: test_trade_adapter.py
tests/unit/services/: test_tastytrade.py
(+10 files in other folders)
