[tool.isort]
profile = "black"

[tool.poetry]
name = "tastytrade-ghostfolio"
version = "0.1.0"
description = "Transfer Tastytrade transactions to Ghostfolio"
authors = ["Rafael Oliveira <olirafa@proton.me>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.2"
tastytrade = "^9.7"
yfinance = "^0.2.52"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pylama = "^8.4.1"
commitizen = "^3.12.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv"